--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ajv": "^6.9.1",
+    "axios": "^0.18.0",
     "fastclick": "^1.0.6",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
