--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "ajv": "^6.9.1",
     "axios": "^0.18.0",
+    "better-scroll": "^1.14.1",
     "fastclick": "^1.0.6",
     "mint-ui": "^2.2.13",
+    "moment": "^2.24.0",
+    "qs": "^6.6.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-preview": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
