--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "qs": "^6.6.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue2-preview": "^1.0.5"
+    "vue2-preview": "^1.0.5",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
